I fixed more arrow spacings for more screen size cases. I also tweeked the heights of the divs for when the loader is on screen since it changes the total height.

--- a/schedulemanager/frontend/src/components/schedules/ScheduleDay.css
+++ b/schedulemanager/frontend/src/components/schedules/ScheduleDay.css
@@ -32,3 +32,16 @@
 .invisibleButton {
   display: none;
 }
+
+.nothingScheduled {
+  animation: fadeIn 1s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0%;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
